<resources>
    <string name="app_name">讯听云</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回 </string>
    <string name="finish">完成</string>
    <string name="loading_message">努力加载中</string>
    <string name="progressdlgtitle">请稍候</string>
    <string name="nowisloading">正在加载...</string>
    <string name="parse_json_err">很抱歉，您暂时无法查看内容</string>
    <string name="prompt">温馨提示</string>
    <string name="particularly">特别推荐</string>
    <string name="desc_radio_choiceness">精选电台</string>
    <string name="desc_radio_more">刷一波</string>
    <string name="exit">退出</string>
    <string name="findnewversion">讯听云 V%1$s</string>
    <string name="force_download">强制升级</string>
    <string name="exitappwhendownloading">正在下载更新文件，现在中断将无法保留已下载的数据，点击“确定”中断下载，点击“取消”继续下载。</string>
    <string name="updateing">更新文件正在下载中</string>
    <string name="newestversion">当前已是最新版本</string>
    <string name="updating">升级</string>
    <string name="main_record">录音</string>
    <string name="main_photograph">拍照</string>
    <string name="main_shoot">摄像</string>
    <string name="main_writing">写稿</string>
    <string name="main_material">素材</string>
    <string name="main_manuscript">稿件</string>
    <string name="main_approval">审批</string>
    <string name="main_message">消息</string>
    <string name="main_edit_message">编辑消息</string>
    <string name="main_name">Mr.张</string>
    <string name="main_compere">交通广播-主持人</string>
    <string name="login_account">请输入账号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_enter">登录</string>
    <string name="login_fail">登录失败</string>
    <string name="login_retrieve_password">找回密码</string>
    <string name="login_accPass_null">账号和密码不能为空</string>
    <string name="login_accPass_err1">密码长度6-20个字符</string>
    <string name="login_not_net">网络异常，请稍后重试</string>
    <string name="login_not_nets">网络异常，稍后重试</string>
    <string name="login_accPass_err">账号或密码不正确，请重试</string>
    <string name="login_disabled">账号已经被禁用</string>
    <string name="setting_text">设置</string>
    <string name="setting_wifi">仅wifi下传输数据</string>
    <string name="setting_reversal">录音时屏幕倒转</string>
    <string name="setting_screen_bright">录音时屏幕长亮</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_help">帮助与反馈</string>
    <string name="setting_make">配置制作网账号</string>
    <string name="setting_exit">退出账号</string>
    <string name="password_find">找回密码</string>
    <string name="password_text">请输入需要找回密码的账号</string>
    <string name="password_findOut">找回</string>
    <string name="password_send">%1$s，您的密码已发送至</string>
    <string name="password_phone">手机：%1$s</string>
    <string name="password_mail">邮箱：%1$s</string>
    <string name="password_account_null">账号不能为空</string>
    <string name="password_account_not">账号不存在</string>
    <string name="person_info">个人信息</string>
    <string name="person_name">姓名</string>
    <string name="person_id">ID</string>
    <string name="person_phone">手机</string>
    <string name="person_mail">邮箱</string>
    <string name="person_department">部门</string>
    <string name="person_role">职务</string>
    <string name="person_make_net">制作网账号</string>
    <string name="make_account">请输入制作网工作站账号</string>
    <string name="make_password">请输入制作网工作站密码</string>
    <string name="make_to_net">配置账号后，发送音频素材到制作网工作站无需登录。</string>
    <string name="make_workstation">您已配置制作网工作站账号：</string>
    <string name="make_save_fail">信息保存失败</string>
    <string name="make_reset">重置</string>
    <string name="help_close">关闭</string>
    <string name="person_photograph">拍照</string>
    <string name="person_album">相册</string>
    <string name="person_upload_success">上传成功</string>
    <string name="person_upload_fail">上传失败</string>
    <string name="person_is_exit">是否退出当前账号？</string>
    <string name="person_version">讯听云 V%1$s</string>
    <string name="setting_cbb">copyright@2017 北京讯听网络技术有限公司</string>
    <string name="audio_record_show_time">00:00</string>
    <string name="audio_record_show_millisecond">.00</string>
    <string name="audio_record_tips">为避免录音中断，建议手机设置成飞行模式</string>
    <string name="audio_record_file_name">文件名：%1$s</string>
    <string name="audio_record_input_source">输入源：%1$s</string>
    <string name="audio_record_file_size">大小：%1$s</string>
    <string name="audio_record_remain_size">剩余容量：%1$s</string>
    <string name="audio_record_back">返回</string>
    <string name="audio_record_recording">录音中</string>
    <string name="audio_record_start">开始录音</string>
    <string name="audio_record_pause">暂停录音</string>
    <string name="audio_record_save">保存</string>
    <string name="audio_record_title">录音</string>
    <string name="audio_record_in_mic">内置麦克风</string>
    <string name="audio_record_out_mic">外置麦克风</string>
    <string name="audio_record_lock_text">滑动解锁>></string>
    <string name="audio_record_raim_size_tip">容量不足，无法录音</string>
    <string name="audio_record_dialog_title">保存录音</string>
    <string name="audio_record_dialog_message">是否保存录音？</string>
    <string name="audio_record_raim_dialog_title">提示</string>
    <string name="audio_record_raim_dialog_message">容量不足，无法继续录音</string>
    <string name="audio_record_dialog_sure">确定</string>
    <string name="audio_record_dialog_cancle">取消</string>
    <string name="audio_record_dialog_file_name_null_tips">文件名不能为空</string>
    <string name="audio_record_dialog_save_success_tips">录音已保存</string>
    <string name="audio_record_dialog_save_failure_tips">录音保存失败</string>
    <string name="audio_record_dialog_file_exists_tips">录音文件名重复，请重新输入</string>
    <string name="audio_record_permission_dialog_title">权限提示</string>
    <string name="audio_record_permission_dialog_message">麦克风没有声音，请在手机的授权管理录音授权。</string>
    <string name="audio_record_back_save_tips">录音已自动保存</string>
    <string name="audio_record_save_failure_tips">录音保存失败</string>
    <string name="material_manage_title">素材</string>
    <string name="material_manage_title_audio">音频</string>
    <string name="material_manage_title_phone">相册</string>
    <string name="material_manage_nothing_title">选择素材</string>
    <string name="material_manage_choose_title">已选择%1$d项</string>
    <string name="material_manage_title_right_choose">选择</string>
    <string name="material_manage_title_right_cancle">取消</string>
    <string name="material_manage_bottom_upload">上传</string>
    <string name="material_manage_bottom_send">发送</string>
    <string name="material_manage_bottom_delete">删除</string>
    <string name="material_manage_date_title_today">今天</string>
    <string name="material_manage_no_data">没有素材</string>
    <string name="material_manage_no_audio_data">没有音频</string>
    <string name="material_manage_no_data_tips">您可以通过拍照或者摄像创建素材</string>
    <string name="material_manage_no_audio_data_tips">您可以通过录音创建音频素材</string>
    <string name="material_manage_delete_material_dialog_title">确定要删除素材？</string>
    <string name="material_manage_delete_photo">确定删除该图片？</string>
    <string name="material_manage_send_max_file_count_tips">最多发送5个素材</string>
    <string name="material_manage_send_no_upload_tips">请把素材上传后，再进行发送</string>
    <string name="material_manage_crop">剪切</string>
    <string name="material_manage_crop_scale">裁剪比例</string>
    <string name="material_manage_save">另存</string>
    <string name="material_manage_scale">原始比例</string>
    <string name="material_manage_square">正方形</string>
    <string name="material_manage_perission_text">权限禁止，无法查询多媒体资源</string>
    <string name="material_manage_photo_crop">图片剪切</string>
    <string name="material_manage_upload_size100_message">%1$d条素材大于100M,请在Wi-Fi下上传</string>
    <string name="material_manage_more_count_text">%1$d条素材大于500M,无法上传</string>
    <string name="material_manage_more_count_text2">%1$d条素材大于500M,无法添加至稿件</string>
    <string name="material_manage_photo_no_crop">图片未剪切，不可另存</string>
    <string name="material_manage_audio_upload_default">未上传</string>
    <string name="material_manage_audio_upload_loading">上传中...</string>
    <string name="material_manage_audio_upload_success">上传成功</string>
    <string name="material_manage_audio_upload_failure">上传失败</string>
    <string name="audio_preview_upload">上传</string>
    <string name="audio_preview_uploading">上传中</string>
    <string name="audio_preview_upload_success">已上传</string>
    <string name="audio_preview_upload_failure">上传失败</string>
    <string name="audio_preview_make_web">传制作网</string>
    <string name="audio_preview_make_web_uploading">上传中</string>
    <string name="audio_preview_added">添加至</string>
    <string name="audio_preview_send">发送</string>
    <string name="audio_preview_delete">删除</string>
    <string name="audio_preview_file_size">大小：%1$s</string>
    <string name="audio_preview_seek_1">倍速1X</string>
    <string name="audio_preview_seek_1_5">倍速1.5X</string>
    <string name="audio_preview_file_save_tips">该文件名已被占用，请重新修改</string>
    <string name="audio_preview_play_time">%1$s&#160;</string>
    <string name="audio_preview_play_time_sum">/&#160;%1$s</string>
    <string name="audio_preview_default_show_time">00:00</string>
    <string name="audio_preview_delete_audio_title">确定删除该音频？</string>
    <string name="audio_preview_make_web_tips">请把素材上传后，再传制作网</string>
    <string name="audio_preview_make_web_delete_tips">“%1$s”已被web端删除，请重新上传。</string>
    <string name="audio_preview_make_web_success_tips">正在申请提交制作网</string>
    <string name="audio_preview_make_web_failure_tips">申请提交制作网失败</string>
    <string name="audio_preview_make_web_handle_tips">正在申请提交制作网，请不要重复提交</string>
    <string name="audio_preview_exists">音频文件不存在</string>
    <string name="audio_preview_add_dialog_text">请添加小于500M的音频</string>
    <string name="audio_preview_upload_dialog_text">请上传小于500M的音频</string>
    <string name="material_upload_size100_message">该素材大于100M，请在Wi-Fi下上传</string>
    <string name="audio_preview_text_content_lable">原音频信息：</string>
    <string name="audio_preview_text_content_audio_name">音频名称：%1$s</string>
    <string name="audio_preview_text_content_audio_time">时长：%1$s</string>
    <string name="audio_preview_text_content_audio_file_size">文件大小：%1$s</string>
    <string name="audio_preview_text_content_32bit">音频位宽：32Bit</string>
    <string name="audio_preview_text_content_128kbps">音频码率：128Kbps</string>
    <string name="audio_preview_text_content_48000hz">音频采样率：48000Hz</string>
    <string name="audio_preview_text_content_stereophony">音频通道：双声道</string>
    <string name="send_title">发送</string>
    <string name="send_title_click_tips">请选择发送目标人员</string>
    <string name="send_title_click_not_send_tips">不能发送给自己哦</string>
    <string name="send_right_submit_text">提交</string>
    <string name="send_contact_navigation_text">联系人</string>
    <string name="send_group_navigation_text">群组</string>
    <string name="send_department_navigation_text">部门</string>
    <string name="send_contact_no_data_text">没有联系人</string>
    <string name="send_group_no_data_text">你还没有创建或加入任何群组</string>
    <string name="send_department_no_data_text">没有部门</string>
    <string name="send_contact_no_data_bottom">请在Web端添加</string>
    <string name="send_department_no_data_bottom">请联系管理员</string>
    <string name="send_group_or_department_text">%1$s</string>
    <string name="send_group_or_department_text_number">（%1$d）</string>
    <string name="send_contact_nobody_text">没有员工</string>
    <string name="send_success">发送成功</string>
    <string name="send_failure">发送失败</string>
    <string name="manuscript_input">输入内容...</string>
    <string name="manuscript_select_">选择流程</string>
    <string name="manuscript_no_process_data">暂无审批流程哦</string>
    <string name="manuscript_please_text">请输入文字批注</string>
    <string name="manuscript_please_text_des">（非必填）</string>
    <string name="manuscript_please_audio">请录入语音批注</string>
    <string name="manuscript_approval_ok">通过</string>
    <string name="manuscript_approval_no">退回</string>
    <string name="manuscript_approval_text_count">%1$d/200</string>
</resources>