<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47"
            android:gravity="center"
            android:text="@string/person_photograph"
            android:background="@drawable/menu_text_bg_selector"
            android:textColor="@color/color_737373"
            android:textSize="@dimen/text_size_48"/>

        <View style="@style/line_style"/>

        <TextView
            android:id="@+id/btn_pick_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47"
            android:gravity="center"
            android:text="@string/person_album"
            android:background="@drawable/menu_text_bg_selector"
            android:textColor="@color/color_737373"
            android:textSize="@dimen/text_size_48" />

        <View style="@style/line_style"/>

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47"
            android:background="@color/color_f3f4f8"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_9da1af"
            android:textSize="@dimen/text_size_48"/>
    </LinearLayout>
</RelativeLayout>