<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_435275"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.3"
        android:background="#82697fb4"/>

    <LinearLayout
        android:id="@+id/password_text_llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_26.7"
            android:layout_marginTop="@dimen/dp_55"
            android:text="@string/password_text"
            android:textColor="@color/color_697fb4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_33"
            android:layout_marginLeft="@dimen/dp_26.7"
            android:layout_marginRight="@dimen/dp_26.7"
            android:layout_marginTop="@dimen/dp_9"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/password_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_38"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:hint="@string/login_account"
                android:paddingLeft="@dimen/dp_44.3"
                android:paddingRight="@dimen/dp_44.3"
                android:singleLine="true"
                android:maxLength="20"
                android:textColor="@color/color_737373"
                android:textColorHint="@color/color_c8c8c8"
                android:textSize="@dimen/text_size_40" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_16.7"
                android:src="@drawable/login_name" />

            <ImageView
                android:id="@+id/password_account_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/password_account"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_16.7"
                android:src="@drawable/login_remove"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/password_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_38"
            android:layout_marginLeft="@dimen/dp_26.7"
            android:layout_marginRight="@dimen/dp_26.7"
            android:background="@drawable/b697fb4_526592_bg_selector"
            android:text="@string/password_findOut"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_48" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_showinfo_llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_26.7"
        android:layout_marginRight="@dimen/dp_26.7"
        android:layout_marginTop="@dimen/dp_51"
        android:background="@drawable/edit_text_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_38"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_38"
        android:gravity="center_horizontal"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/password_accountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_send" />

            <TextView
                android:id="@+id/password_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_11"
                android:layout_marginTop="@dimen/dp_11"
                android:text="@string/password_phone" />

            <TextView
                android:id="@+id/password_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_mail" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
